Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7762

14 characters of administrator password is not secure enough for most people

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.3.17
    • Security, Setup
    • None
    • Any

    Description

      USETUP asks for an Administrator password which is 14 characters or less. This will not suffice for most of the people. Please remove the length limit at all or increase into maximal possible length which will not cause slowdown at login.

      Attachments

        Activity

          People

            ekohl ekohl
            erkinalp erkinalp
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: