[SYSSETUP] - Store the administrator account name as the default user name. - Extend the maximum password length to 127 characters. CORE-7762 #resolve

svn path=/trunk/; revision=62577